--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,14 @@ p {
     margin-bottom: 15px;
 }
 
+.header-spacing-groot {
+    margin-bottom: 50px;
+}
+
+.header-spacing-padding {
+    padding-bottom: 50px;
+}
+
 /* werk */
 
 .werk-raster {
@@ -172,6 +180,29 @@ p {
 .foto-GvL {
     width: 100%;
     height: 100%;
+}
+
+.insta-groot {
+    width: 33%;
+    height: auto;
+}
+
+.insta-klein {
+    width: 18%;
+    height: auto;
+    margin-left: 3%;
+    margin-right: 10%;
+}
+
+.map {
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+
+.web-ss {
+    width: 20%;
+    height: auto;
+    margin-left: 4%;
 }
 
 .museum {
@@ -268,6 +299,7 @@ p {
 .comp-list {
     width: 60%;
     height: auto;
+    margin-bottom: 10%;
 
 }
 
@@ -281,7 +313,10 @@ p {
     margin: 0 auto;
 }
 
-
+.foto-responsive {
+    width: 100%;
+    height: auto;
+}
 
 
 /* extra */
@@ -312,6 +347,7 @@ p {
 
 .midden {
     margin: 0 auto;
+    display: block;
 }
 
 a {
