--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,8 @@ p {
     height: auto;
     /* position: relative; */
     float: left;
-    margin: 35vh auto;
+    margin: 0 auto;
+    margin-top: 35vh;
 }
 
 .title {
@@ -127,19 +128,12 @@ p {
 .inleiding {
     width: 38%;
     height: auto;
-    margin: 20vh auto;
+    margin: 0 auto;
+    margin-top: 20vh;
 }
 
 .header-spacing {
     margin-bottom: 15px;
-}
-
-.header-spacing-groot {
-    margin-bottom: 50px;
-}
-
-.header-spacing-padding {
-    padding-bottom: 50px;
 }
 
 /* werk */
@@ -180,29 +174,6 @@ p {
 .foto-GvL {
     width: 100%;
     height: 100%;
-}
-
-.insta-groot {
-    width: 33%;
-    height: auto;
-}
-
-.insta-klein {
-    width: 18%;
-    height: auto;
-    margin-left: 3%;
-    margin-right: 10%;
-}
-
-.map {
-    margin-top: 10%;
-    margin-bottom: 10%;
-}
-
-.web-ss {
-    width: 20%;
-    height: auto;
-    margin-left: 4%;
 }
 
 .museum {
@@ -299,7 +270,6 @@ p {
 .comp-list {
     width: 60%;
     height: auto;
-    margin-bottom: 10%;
 
 }
 
@@ -313,10 +283,7 @@ p {
     margin: 0 auto;
 }
 
-.foto-responsive {
-    width: 100%;
-    height: auto;
-}
+
 
 
 /* extra */
@@ -347,7 +314,6 @@ p {
 
 .midden {
     margin: 0 auto;
-    display: block;
 }
 
 a {
@@ -355,4 +321,53 @@ a {
     /* blue colors for links too */
     text-decoration: inherit;
     /* no underline */
+}
+
+.ham {
+    height: 5%;
+    width: 8%;
+    float: right;
+    right: 0;
+    margin-top: 3%;
+    margin-right: 3%;
+    position: fixed;
+
+}
+
+.streep {
+    width: 100%;
+    height: 8%;
+    background-color: #FF6110;
+    margin-bottom: 18%;
+    border-radius: 50px;
+
+}
+
+@media only screen and (max-width: 450px) {
+    h1 {
+
+        font-size: 3em;
+    }
+
+    .klein {
+        display: none;
+
+    }
+
+    .PF-foto {
+        width: 100%;
+        top: 0;
+        height: auto;
+    }
+
+    .voorstel {
+        width: 70vw;
+        margin-top: 60%;
+    }
+
+
+    .inleiding {
+        width: 60vw;
+        margin-top: 45vh;
+    }
 }
